refactor: use `URI` instead of `URL` in `PolarionUtils` and enhance `ImportJobsCleaner` lifecycle management
- Replaced `URL` with `URI` for better handling of absolute URLs in `PolarionUtils`.
- Added `stopCleaningJob` method in `ImportJobsCleaner` for proper executor service shutdown.